// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots npm-list/ActionsFiltersContainer default view 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="apilist-row apilist-row--right apilist-row--search"
      >
        <div
          className="apilist-row"
        >
          <Select
            className="apilist-select-filter"
            labelKey="name"
            menuContainerStyle={
              Object {
                "maxHeight": "500px",
              }
            }
            menuStyle={
              Object {
                "maxHeight": "500px",
              }
            }
            onChange={undefined}
            openOnFocus={true}
            options={Array []}
            placeholder="Add Filter"
            value={null}
            valueKey="key"
          />
          <div
            className="apilist-dropdown"
          >
            <button
              className="apilist-button--dropdown apilist-button apilist-button--favourites"
              type="button"
            >
              <i
                className="fa fa-heart-o"
              />
               Favourites
            </button>
            <div
              className="apilist-dropdown__menu"
            >
              <div
                className="apilist-dropdown__item apilist-dropdown__item--input"
              >
                <form
                  onSubmit={[Function]}
                >
                  <input
                    className="apilist-input apilist-input__favourite"
                    onChange={[Function]}
                    placeholder="Save as new"
                    type="text"
                    value=""
                  />
                  <button
                    hidden={true}
                    type="submit"
                  >
                    Add
                  </button>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="apilist--grow"
      >
        <div
          className="apilist-row"
        >
          <Select
            className="apilist-current-filter__active-status"
            labelKey="label"
            loadOptions={undefined}
            multi={false}
            onChange={[Function]}
            optionRenderer={null}
            options={
              Array [
                Object {
                  "label": "Yes",
                  "value": "True",
                },
                Object {
                  "label": "No",
                  "value": "False",
                },
              ]
            }
            placeholder="Any value"
            value={null}
            valueKey="value"
          />
          <button
            className="apilist-button apilist-button--delete apilist-button--icon apilist-button--borderless"
            onClick={[Function]}
          />
        </div>
        <div
          className="apilist-row"
        >
          <div
            className="month-picker "
          >
            <input
              className="apilist-input apilist-input--wide"
              onChange={[Function]}
              onClick={[Function]}
              placeholder="Select month"
              type="text"
              value="Jul 2017"
            />
            <div
              className="rmp-container rmp-table  "
            >
              <div
                className="rmp-overlay"
                disabled={undefined}
                onClick={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "KhtmlUserSelect": "none",
                    "MozUserSelect": "none",
                    "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                    "WebkitTouchCallout": "none",
                    "WebkitUserSelect": "none",
                    "msUserSelect": "none",
                    "userSelect": "none",
                  }
                }
              />
              <div
                className="rmp-cell"
              >
                <div
                  className="rmp-popup  light "
                >
                  <div
                    className="rmp-pad"
                  >
                    <div>
                      <label>
                        2017
                      </label>
                      <i
                        className="rmp-tab rmp-btn prev "
                        data-id={0}
                        onClick={[Function]}
                      >
                        &lt;
                      </i>
                      <i
                        className="rmp-tab rmp-btn next "
                        data-id={0}
                        onClick={[Function]}
                      >
                        &gt;
                      </i>
                    </div>
                    <ul>
                      <li
                        className="rmp-btn "
                        data-id="0:1"
                        onClick={[Function]}
                      >
                        Jan
                      </li>
                      <li
                        className="rmp-btn "
                        data-id="0:2"
                        onClick={[Function]}
                      >
                        Feb
                      </li>
                      <li
                        className="rmp-btn "
                        data-id="0:3"
                        onClick={[Function]}
                      >
                        Mar
                      </li>
                      <li
                        className="rmp-btn "
                        data-id="0:4"
                        onClick={[Function]}
                      >
                        Apr
                      </li>
                      <li
                        className="rmp-btn "
                        data-id="0:5"
                        onClick={[Function]}
                      >
                        May
                      </li>
                      <li
                        className="rmp-btn "
                        data-id="0:6"
                        onClick={[Function]}
                      >
                        Jun
                      </li>
                      <li
                        className="rmp-btn active"
                        data-id="0:7"
                        onClick={[Function]}
                      >
                        Jul
                      </li>
                      <li
                        className="rmp-btn "
                        data-id="0:8"
                        onClick={[Function]}
                      >
                        Aug
                      </li>
                      <li
                        className="rmp-btn "
                        data-id="0:9"
                        onClick={[Function]}
                      >
                        Sep
                      </li>
                      <li
                        className="rmp-btn "
                        data-id="0:10"
                        onClick={[Function]}
                      >
                        Oct
                      </li>
                      <li
                        className="rmp-btn "
                        data-id="0:11"
                        onClick={[Function]}
                      >
                        Nov
                      </li>
                      <li
                        className="rmp-btn "
                        data-id="0:12"
                        onClick={[Function]}
                      >
                        Dec
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            className="apilist-button apilist-button--delete apilist-button--icon apilist-button--borderless"
            onClick={[Function]}
          />
        </div>
        <div
          className="apilist-row"
        >
          <div
            className="apilist-current-filter__filter-comparison"
          >
            <Select
              clearable={false}
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": "Exact",
                    "value": "exact",
                  },
                  Object {
                    "label": "Greater than",
                    "value": "gt",
                  },
                  Object {
                    "label": "Less than",
                    "value": "lt",
                  },
                  Object {
                    "label": "Greater than or equal",
                    "value": "gte",
                  },
                  Object {
                    "label": "Less than or equal",
                    "value": "lte",
                  },
                ]
              }
              value={
                Object {
                  "label": "Exact",
                  "value": "exact",
                }
              }
            />
          </div>
          <div
            className="apilist-currency-filter apilist-current-filter__active-status"
          >
            <span
              className="apilist-currency-filter__symbol"
            >
              $
            </span>
            <input
              className="apilist-input apilist-input--currency"
              onChange={[Function]}
              type="text"
              value={undefined}
            />
            <span
              className="apilist-currency-filter__decimal"
            >
              .00
            </span>
          </div>
          <button
            className="apilist-button apilist-button--delete apilist-button--icon apilist-button--borderless"
            onClick={[Function]}
          />
        </div>
        <div
          className="apilist-row"
        >
          <div
            className="apilist-current-filter__filter-comparison"
          >
            <Select
              clearable={false}
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": "Is",
                    "value": "is",
                  },
                  Object {
                    "label": "Is Not",
                    "value": "is_not",
                  },
                ]
              }
              value="is"
            />
          </div>
          <Select
            className="apilist-current-filter__active-status"
            labelKey="label"
            loadOptions={undefined}
            multi={false}
            onChange={[Function]}
            optionRenderer={null}
            options={Array []}
            placeholder="Any value"
            value={null}
            valueKey="value"
          />
          <button
            className="apilist-button apilist-button--delete apilist-button--icon apilist-button--borderless"
            onClick={[Function]}
          />
        </div>
        <div
          className="apilist-row"
        >
          <div
            className="apilist-current-filter__filter-comparison"
          >
            <Select
              clearable={false}
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": "Fixed Date",
                    "value": "fixed",
                  },
                  Object {
                    "label": "Relative to Now",
                    "value": "relative",
                  },
                ]
              }
              value="relative"
            />
          </div>
          <Select
            className="apilist-current-filter__active-status"
            clearable={false}
            onChange={[Function]}
            options={
              Array [
                Object {
                  "label": "Today",
                  "value": "today",
                },
                Object {
                  "label": "Beginning of this week",
                  "value": "week_start",
                },
                Object {
                  "label": "Beginning of this month",
                  "value": "month_start",
                },
                Object {
                  "label": "Beginning of this year",
                  "value": "year_start",
                },
              ]
            }
            value={undefined}
          />
          <button
            className="apilist-button apilist-button--delete apilist-button--icon apilist-button--borderless"
            onClick={[Function]}
          />
        </div>
        <div
          className="apilist-row"
        >
          <div
            className="apilist-dayfilter"
          >
            <button
              className="apilist-button"
              onClick={[Function]}
            >
              ← Previous
            </button>
            <h3
              className="apilist-dayfilter__day-name"
            >
              Saturday July 15th 2017
            </h3>
            <button
              className="apilist-button"
              onClick={[Function]}
            >
              Next →
            </button>
          </div>
        </div>
        <div
          className="apilist-row"
        >
          <div
            className="apilist-current-filter__filter-comparison"
          >
            <Select
              clearable={false}
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": "Is",
                    "value": "is",
                  },
                  Object {
                    "label": "Is Not",
                    "value": "is_not",
                  },
                ]
              }
              value="is"
            />
          </div>
          <Select
            className="apilist-current-filter__active-status"
            labelKey="label"
            loadOptions={undefined}
            multi={true}
            onChange={[Function]}
            optionRenderer={null}
            options={Array []}
            placeholder="Any value"
            value={null}
            valueKey="value"
          />
          <button
            className="apilist-button apilist-button--delete apilist-button--icon apilist-button--borderless"
            onClick={[Function]}
          />
        </div>
        <div
          className="apilist-row"
        >
          <div
            className="apilist-current-filter__filter-comparison"
          >
            <Select
              clearable={false}
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": "Exact",
                    "value": "exact",
                  },
                  Object {
                    "label": "Greater than",
                    "value": "gt",
                  },
                  Object {
                    "label": "Less than",
                    "value": "lt",
                  },
                  Object {
                    "label": "Greater than or equal",
                    "value": "gte",
                  },
                  Object {
                    "label": "Less than or equal",
                    "value": "lte",
                  },
                ]
              }
              value="exact"
            />
          </div>
          <div
            className="apilist-row apilist-current-filter__active-status"
          >
            <input
              className="apilist-input apilist-input__number-slider--number"
              max={100}
              min={0}
              onChange={[Function]}
              type="number"
              value=""
            />
            <input
              className="apilist-input__number-slider--slider"
              max={100}
              min={0}
              onChange={[Function]}
              onMouseUp={[Function]}
              type="range"
              value=""
            />
          </div>
          <button
            className="apilist-button apilist-button--delete apilist-button--icon apilist-button--borderless"
            onClick={[Function]}
          />
        </div>
        <div
          className="apilist-row"
        >
          <input
            className="apilist-current-filter__active-status apilist-input"
            onChange={[Function]}
            placeholder="Search the table below"
            type="text"
            value=""
          />
        </div>
        <div
          className="apilist-row"
        >
          <div
            className="apilist-current-filter__filter-comparison"
          >
            <Select
              clearable={false}
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": "Contains",
                    "value": "contains",
                  },
                  Object {
                    "label": "Does Not Contain",
                    "value": "not_contains",
                  },
                ]
              }
              value={
                Object {
                  "label": "Contains",
                  "value": "contains",
                }
              }
            />
          </div>
          <input
            className="apilist-current-filter__active-status apilist-input"
            onChange={[Function]}
            placeholder="Search the table below"
            type="text"
            value=""
          />
          <button
            className="apilist-button apilist-button--delete apilist-button--icon apilist-button--borderless"
            onClick={[Function]}
          />
        </div>
        <div
          className="apilist-row"
        >
          <Select.Async
            className="apilist-current-filter__active-status"
            labelKey="label"
            loadOptions={[Function]}
            multi={false}
            onChange={[Function]}
            optionRenderer={null}
            options={Array []}
            placeholder="Any value"
            value={null}
            valueKey="value"
          />
          <button
            className="apilist-button apilist-button--delete apilist-button--icon apilist-button--borderless"
            onClick={[Function]}
          />
        </div>
        <div
          className="apilist-row"
        >
          <Select.Async
            className="apilist-current-filter__active-status"
            labelKey="label"
            loadOptions={[Function]}
            multi={true}
            onChange={[Function]}
            optionRenderer={null}
            options={Array []}
            placeholder="Any value"
            value={null}
            valueKey="value"
          />
          <button
            className="apilist-button apilist-button--delete apilist-button--icon apilist-button--borderless"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="apilist-row apilist-row--justify"
      >
        <span
          className="apilist-results-text"
        >
          573,489 items found
        </span>
        <div
          className="apilist-dropdown"
        >
          <button
            className="apilist-button apilist-button--dropdown apilist-button--borderless"
          >
            <i
              className="fa fa-list"
            />
             Change columns
          </button>
          <div
            className="apilist-dropdown__menu apilist-dropdown__menu--borderless"
          >
            <button
              className="apilist-dropdown__item"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="fa fa-square-o apilist-dropdown__icon"
              />
              Favourite Colour
            </button>
          </div>
        </div>
        <div />
      </div>
    </div>
  </div>
  <button
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div
      style={undefined}
    >
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            npm-list/ActionsFiltersContainer
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            default view
          </h2>
        </div>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <div
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                "fontSize": "15px",
              }
            }
          >
            Container to render filters and actions section
          </div>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                ActionsFilterContainer
              </span>
              <span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}
                  >
                    filters
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          [
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                Renderer
                              </span>
                              : 
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  Filter()
                                </span>
                                }
                              </span>
                              , 
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                filterKey
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                BooleanFilter
                                "
                              </span>
                              , 
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                active
                              </span>
                              : 
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  true
                                </span>
                                }
                              </span>
                              , 
                              …
                              }
                            </span>
                            }
                          </span>
                          , 
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                Renderer
                              </span>
                              : 
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  Filter()
                                </span>
                                }
                              </span>
                              , 
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                filterKey
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                MonthFilter
                                "
                              </span>
                              , 
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                active
                              </span>
                              : 
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  true
                                </span>
                                }
                              </span>
                              , 
                              …
                              }
                            </span>
                            }
                          </span>
                          , 
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                Renderer
                              </span>
                              : 
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  Filter()
                                </span>
                                }
                              </span>
                              , 
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                filterKey
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                CurrencyFilter
                                "
                              </span>
                              , 
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                active
                              </span>
                              : 
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  true
                                </span>
                                }
                              </span>
                              , 
                              …
                              }
                            </span>
                            }
                          </span>
                          , 
                          …
                          ]
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}
                  >
                    meta
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            totalCount
                          </span>
                          : 
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }
                            >
                              573489
                            </span>
                            }
                          </span>
                          }
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}
                  >
                    columns
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          [
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                dataKey
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                favouriteColour
                                "
                              </span>
                              , 
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                header
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Favourite Colour
                                "
                              </span>
                              , 
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                optional
                              </span>
                              : 
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  true
                                </span>
                                }
                              </span>
                              }
                            </span>
                            }
                          </span>
                          ]
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}
                  >
                    numSelected
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }
                        >
                          3
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}
                  >
                    showBulkActionsButton
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}
                  >
                    updateColumns
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          updateColumns()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}
                  >
                    updateFilter
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          Update filters()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <br />
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              ActionsFilterContainer
              " Component
            </h2>
            <table
              className="css-1ytzlk7"
            >
              <thead>
                <tr>
                  <th
                    className="css-d52hbj"
                  >
                    property
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    propType
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    required
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    default
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    favourites
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span>
                      {
                      <span
                        style={
                          Object {
                            "color": "#666",
                          }
                        }
                      >
                        [
                        ]
                      </span>
                      }
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    handleDeleteFavourite
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    selectedFavouriteName
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    handleAddFavourite
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    loadFavourite
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    filters
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span>
                      {
                      <span
                        style={
                          Object {
                            "color": "#666",
                          }
                        }
                      >
                        [
                        ]
                      </span>
                      }
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    updateFilter
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    removeFilter
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    searchKey
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    itemSingleName
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span
                      style={
                        Object {
                          "color": "#22a",
                          "wordBreak": "break-word",
                        }
                      }
                    >
                      "
                      item
                      "
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    itemPluralName
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    itemCount
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    columns
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span>
                      {
                      <span
                        style={
                          Object {
                            "color": "#666",
                          }
                        }
                      >
                        [
                        ]
                      </span>
                      }
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    updateColumns
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    favouritesEnabled
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span>
                      {
                      <span
                        style={
                          Object {
                            "color": "#a11",
                          }
                        }
                      >
                        true
                      </span>
                      }
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    meta
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    addFilter
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    status
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    selection
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span>
                      {
                      <span
                        style={
                          Object {
                            "color": "#666",
                          }
                        }
                      >
                        {
                        }
                      </span>
                      }
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    selectAll
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    deselectAll
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    customActions
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots npm-list/ActionsFiltersContainer has custom actions 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="apilist-row apilist-row--right apilist-row--search"
      >
        <div
          className="apilist-row"
        >
          <div
            className="apilist-dropdown"
          >
            <button
              className="apilist-button--dropdown apilist-button apilist-button--favourites"
              type="button"
            >
              <i
                className="fa fa-heart-o"
              />
               Favourites
            </button>
            <div
              className="apilist-dropdown__menu"
            >
              <div
                className="apilist-dropdown__item apilist-dropdown__item--input"
              >
                <form
                  onSubmit={[Function]}
                >
                  <input
                    className="apilist-input apilist-input__favourite"
                    onChange={[Function]}
                    placeholder="Save as new"
                    type="text"
                    value=""
                  />
                  <button
                    hidden={true}
                    type="submit"
                  >
                    Add
                  </button>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="apilist--grow"
      />
      <div
        className="apilist-row apilist-row--justify"
      >
        <span
          className="apilist-results-text"
        >
          573,489 cats found
        </span>
        <a
          href="http://thecatapi.com/api/images/get?format=src&type=gif"
        >
          Download 
          0
           
          cats
        </a>
        <button
          onClick={[Function]}
        >
          Pat 
          0
           
          cats
        </button>
        <div />
      </div>
    </div>
  </div>
  <button
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div
      style={undefined}
    >
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            npm-list/ActionsFiltersContainer
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            has custom actions
          </h2>
        </div>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <div
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                "fontSize": "15px",
              }
            }
          >
            Container to render filters and actions section
          </div>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                ActionsFilterContainer
              </span>
              <span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}
                  >
                    meta
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            totalCount
                          </span>
                          : 
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }
                            >
                              573489
                            </span>
                            }
                          </span>
                          }
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}
                  >
                    numSelected
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }
                        >
                          3
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}
                  >
                    showBulkActionsButton
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}
                  >
                    itemPluralName
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }
                      >
                        "
                        cats
                        "
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}
                  >
                    updateColumns
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          updateColumns()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}
                  >
                    updateFilters
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          Update filters()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}
                  >
                    customActions
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          [
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#170",
                                }
                              }
                            >
                              downloadSomething()
                            </span>
                            }
                          </span>
                          , 
                          <span>
                            {
                            <span
                              style={
                                Object {
                                  "color": "#170",
                                }
                              }
                            >
                              aButton()
                            </span>
                            }
                          </span>
                          ]
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <br />
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              ActionsFilterContainer
              " Component
            </h2>
            <table
              className="css-1ytzlk7"
            >
              <thead>
                <tr>
                  <th
                    className="css-d52hbj"
                  >
                    property
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    propType
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    required
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    default
                  </th>
                  <th
                    className="css-d52hbj"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    favourites
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span>
                      {
                      <span
                        style={
                          Object {
                            "color": "#666",
                          }
                        }
                      >
                        [
                        ]
                      </span>
                      }
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    handleDeleteFavourite
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    selectedFavouriteName
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    handleAddFavourite
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    loadFavourite
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    filters
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span>
                      {
                      <span
                        style={
                          Object {
                            "color": "#666",
                          }
                        }
                      >
                        [
                        ]
                      </span>
                      }
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    updateFilter
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    removeFilter
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    searchKey
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    itemSingleName
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span
                      style={
                        Object {
                          "color": "#22a",
                          "wordBreak": "break-word",
                        }
                      }
                    >
                      "
                      item
                      "
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    itemPluralName
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    itemCount
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    columns
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span>
                      {
                      <span
                        style={
                          Object {
                            "color": "#666",
                          }
                        }
                      >
                        [
                        ]
                      </span>
                      }
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    updateColumns
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    favouritesEnabled
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span>
                      {
                      <span
                        style={
                          Object {
                            "color": "#a11",
                          }
                        }
                      >
                        true
                      </span>
                      }
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    meta
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    addFilter
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    status
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    selection
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    <span>
                      {
                      <span
                        style={
                          Object {
                            "color": "#666",
                          }
                        }
                      >
                        {
                        }
                      </span>
                      }
                    </span>
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    selectAll
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    deselectAll
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1ygfcef"
                  >
                    customActions
                  </td>
                  <td
                    className="css-1ygfcef"
                  >
                    <span />
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  >
                    -
                  </td>
                  <td
                    className="css-d52hbj"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
